Fix bar not collapsing

--- a/integrations/tabcenter-reborn/cascade-tcr.css
+++ b/integrations/tabcenter-reborn/cascade-tcr.css
@@ -14,7 +14,7 @@
   top: 0; bottom: 0;
   z-index: 1;
 
-  min-width: 50px; max-width: 50px;
+  min-width: 50px !important; max-width: 50px !important;
 
   border-right: none;
 
